fixed the misaligned testimonials

--- a/anchorage_shortcut/static/css/anchorage_shortcut.css
+++ b/anchorage_shortcut/static/css/anchorage_shortcut.css
@@ -335,8 +335,8 @@ a.footer-link {
     display: block;
     width: 100%;
     text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .task-list-title,
